--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-map-gl": "7.1.7",
     "react-scripts": "5.0.1",
     "react-waypoint": "^9.0.3",
-    "tailwindcss": "^1.9.6",
+    "tailwindcss": "1.9.6",
     "viewport-mercator-project": "6.1.1",
     "worker-loader": "^3.0.8"
   },
@@ -47,6 +47,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "autoprefixer": "9",
+    "postcss": "7",
     "sass": "^1.79.5"
   }
 }
