--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "react-map-gl": "7.1.7",
     "react-scripts": "5.0.1",
     "react-waypoint": "^9.0.3",
-    "tailwindcss": "1.9.6",
+    "tailwindcss": "^1.9.6",
     "viewport-mercator-project": "6.1.1",
     "worker-loader": "^3.0.8"
   },
- "scripts": {
-  "build:tailwind": "node ./node_modules/.bin/tailwindcss build src/tailwind.css -o src/tailwind.output.css",
-  "prebuild": "node ./node_modules/.bin/tailwindcss build src/tailwind.css -o src/tailwind.output.css",
-  "start": "node ./node_modules/.bin/tailwindcss build src/tailwind.css -o src/tailwind.output.css && react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-}
-
+  "scripts": {
+    "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.output.css",
+    "prestart": "npm run build:tailwind",
+    "prebuild": "npm run build:tailwind",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -47,9 +47,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "autoprefixer": "9",
-    "postcss": "7",
     "sass": "^1.79.5"
   }
 }
